development: (docs) Swagger made more complete.
